--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ a {
     margin-top: 30px;
 }
 
-.row-two>button {
+a>button {
     height: 125px;
     width: 120px;
     border-radius: 12px;
@@ -197,6 +197,7 @@ a {
     display: flex;
     justify-content: start;
     align-items: end;
+    margin-left: -2px;
 }
 
 .bottom-text {
