--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
     flex: none;
     justify-content: space-evenly;
     gap: 20px;
-    margin-top: 15px;
+    margin-top: 12px;
 }
 
 a {
@@ -39,43 +39,44 @@ a {
 
 .first {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     height: 300px;
-    background-color: #1F2937;
+    background-color: lightgray;
     margin: -8px;
 }
 
 .main {
     display: flex;
+    gap: 50px;
 }
 
 .main>.left {
     display: flex;
     justify-content: space-between;
     flex-direction: column;
-    width: 400px;
+    align-items: center;
+    width: 800px;
     height: 200px;
     color: #f9faf8;
-}
-
-.main>.right {
-    display: flex;
-    flex-shrink: 1;
 }
 
 .left>.text {
     font-size: 48px;
     font-weight: 900;
     margin-left: -3px;
+    text-align: center;
+    color: #1F2937;
 }
 
 .left>.text-two {
-    font-size: 18px;
+    font-size: 24px;
+    text-align: center;
+    color: #1F2937;
 }
 
 .left>a>button {
-    background-color: #3882f6;
+    background-color: #1F2937;
     color: #f9faf8;
     border-radius: 6px;
     width: 100px;
@@ -83,11 +84,6 @@ a {
     border-color: transparent;
     margin-top: 10px;
     margin-left: -3px;
-}
-
-.main>.right {
-    width: 400px;
-    height: 200px;
 }
 
 .second {
@@ -119,7 +115,7 @@ a {
     justify-content: center;
     align-items: center;
     height: 125px;
-    gap: 40px;
+    gap: 80px;
     margin-top: 30px;
 }
 
@@ -127,7 +123,7 @@ a>button {
     height: 125px;
     width: 120px;
     border-radius: 12px;
-    border-color: #3882f6;
+    border-color: #1F2937;
 }
 
 .row-three {
@@ -135,7 +131,7 @@ a>button {
     justify-content: center;
     align-items: center;
     height: 125px;
-    gap: 40px;
+    gap: 80px;
     margin-bottom: 20px;
     margin-top: 10px;
 }
@@ -190,7 +186,7 @@ a>button {
 .top-text {
     width: 300px;
     height: 63px;
-    background-color: #3882f6;
+    background-color: #1F2937;
     color: #f9faf8;
     border-radius: 6px;
     font-size: 30px;
@@ -234,7 +230,7 @@ a>button {
     align-items: center;
     width: 800px;
     height: 125px;
-    background-color: #3882f6;
+    background-color: #1F2937;
     color: white;
 }
 
@@ -261,20 +257,10 @@ a>button {
 }
 
 .right>a>button {
-    background-color: #3882f6;
-    color: #f9faf8;
+    background-color: white;
+    color: #1F2937;
     border-radius: 6px;
     width: 125px;
     height: 30px;
     border-color: white;
-}
-
-
-img {
-    vertical-align: center;
-    object-fit: cover;
-    width: 400px;
-    height: 200px;
-    display: flex;
-    flex: 1;
 }
